Update title slidee

--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,8 @@
 %%  Title information
 \title[M11.13.4 Nozizeption und Schmerz]{M11.13.4 Nozizeption und Schmerz}
 \author[melanie.stefan@medicalschool-berlin.de]{}
-\institute[]{Prof. Melanie Stefan \\ melanie.stefan@medcialschool-berlin.de}
-\date{WiSe 2022/23}
+\institute[]{Prof. Melanie Stefan \\ melanie.stefan@medicalschool-berlin.de}
+\date{WiSe 2023/24}
  
 
 % Table of contents to pop up at the beginning of each section
@@ -922,7 +922,7 @@ Das nozizeptive System kommuniziert über die Amygdala mit dem Limbischen System
     \item
     Beteiligt sind der Locus caeruleus und das zentrale Höhlengrau (über den Nucleus Raphe Magnus)
     \item
-    Hemmung der Schmerzleitung durch GABA, Glycin und körpereigene Opioide (\textcolor{theme}{Enkephaline})
+    Hemmung der Schmerzleitung durch GABA, Glycin und körpereigene Opioide (z.B. Metenkephalin)
     \item
     Verstärkung der Schmerzleitung durch Neuropeptide
 \end{itemize}
@@ -943,7 +943,18 @@ Das nozizeptive System kommuniziert über die Amygdala mit dem Limbischen System
 \end{frame}
 
 
+% \begin{frame}{Körpereigene Opioide}
+% \begin{itemize}
+%     \item Endorphine, Enkephaline, Dynorphine 
+% \item Verschiedene Rezeptorklassen (\(\mu\), \(\delta\), \(\kappa\) ) sind relativ, aber nicht komplett selektiv für bestimmte Opioid-Klassen
+% \item
+% Alle Rezeptoren sind G-Protein gekoppelte Rezeptoren vom Typ G\textsubscript{S}
+% \item
+% Das heißt: \pause Sie hemmen Adenylatzyklase
 
+% \end{itemize}
+
+% \end{frame}
 
 
 
