--- a/main.tex
+++ b/main.tex
@@ -58,6 +58,25 @@ $\,$\\[6cm]
 }
 
 
+\begin{frame}{Kleine Vorwarnung: Seminar}
+
+\begin{columns}[c]
+    \begin{column}{5cm}
+       Vorbereitung auf das Seminar ist natürlich immer wichtig, aber diesmal haben wir besonders viel vor! 
+       
+       Sie werden im Seminar einen Podcast erstellen (Details erklären wir Ihnen noch), daher ist es wichtig, dass Sie inhaltlich schon fit sind. 
+    \end{column}
+    
+    \begin{column}{5cm}
+        \begin{center}
+            \includegraphics[width=\textwidth]{convertkit-BOI9jki3nzY-unsplash.jpg}
+        \end{center}
+    \end{column}
+
+\end{columns}
+
+\end{frame}
+
 { \usebackgroundtemplate{\includegraphics[width=1.2\paperwidth]{cactus.jpg}} 
 \begin{frame}
 \frametitle{Was wollten Sie schon immer über Schmerz wissen?}
@@ -1136,6 +1155,10 @@ La Columna Rota. By Frida Kahlo/Museo Dolores Olmedo - \url{http://www.tate.org.
 
 \item
 Luftballons mit frohen und traurigen Smileys. Photo by \href{https://unsplash.com/@artbyhybrid?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Hybrid} on \href{https://unsplash.com/s/photos/feedback?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
+
+\item 
+Mann mit Kopfhörern, der an einem Computer sitzt. Photo by \href{https://unsplash.com/@convertkit?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash}{  ConvertKit} on \href{https://unsplash.com/photos/BOI9jki3nzY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash}{Unsplash}
+  
 
 \item
 Metenkephalin. Von Edgar181 - Eigenes Werk, Gemeinfrei, \url{https://commons.wikimedia.org/w/index.php?curid=2834218}
