Add feedback from Summer 23

--- a/main.tex
+++ b/main.tex
@@ -841,7 +841,7 @@ sensorisch-diskriminative Komponente
 \item
 affektive Schmerzkomponente
 \item
-Posteriorer Komplex, interlaminären Komplexkerne des Thalamus, Verbindungen zu 
+Posteriorer Komplex, interlaminäre Komplexkerne des Thalamus, Verbindungen zu 
 \begin{itemize}
     \item 
     Insula: Kommunikation mit dem limbischen System, Leiden
@@ -1155,6 +1155,21 @@ La Columna Rota. By Frida Kahlo/Museo Dolores Olmedo - \url{http://www.tate.org.
 
 \item
 Luftballons mit frohen und traurigen Smileys. Photo by \href{https://unsplash.com/@artbyhybrid?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Hybrid} on \href{https://unsplash.com/s/photos/feedback?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
+
+\end{itemize}
+\end{tiny}
+
+\end{frame}
+
+
+\begin{frame}
+ 
+\frametitle{Bildnachweis}
+ 
+\begin{tiny}
+  
+
+\begin{itemize}
 
 \item 
 Mann mit Kopfhörern, der an einem Computer sitzt. Photo by \href{https://unsplash.com/@convertkit?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash}{  ConvertKit} on \href{https://unsplash.com/photos/BOI9jki3nzY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash}{Unsplash}
