Feedbackhinweisblock mit Link

--- a/main.tex
+++ b/main.tex
@@ -1096,25 +1096,13 @@ $\,$\\[1cm]
 \begin{frame}
 \frametitle{Danke für Ihr Feedback!}
 
-\begin{columns}[c]
-
-\begin{column}{6cm}
 \begin{center}
- \includegraphics[width=\textwidth]{smilie_balloons.jpg}
+    \includegraphics[width=0.6\textwidth]{feedback_QR.png}
 \end{center}
 
-\end{column}
 
-\begin{column}{4cm}
+\url{https://forms.office.com/e/00k86PAqm3}
 
-
-\begin{center}
-\includegraphics[width=\textwidth]{feedback_QR.png}
-\end{center}
-\end{column}
-
-
-\end{columns}
 \end{frame}
 
 
@@ -1153,8 +1141,6 @@ Kaktus. Photo by \href{https://unsplash.com/@earl_plannerzone?utm_source=unsplas
 La Columna Rota. By Frida Kahlo/Museo Dolores Olmedo - \url{http://www.tate.org.uk/whats-on/tate-modern/exhibition/frida-kahlo/frida-kahlo-room-guide/frida-kahlo-room-guide-room-11}, Fair use, \url{https://en.wikipedia.org/w/index.php?curid=47997195}
 
 
-\item
-Luftballons mit frohen und traurigen Smileys. Photo by \href{https://unsplash.com/@artbyhybrid?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Hybrid} on \href{https://unsplash.com/s/photos/feedback?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
 
 \end{itemize}
 \end{tiny}
