Add slides on endogenous opioids

--- a/main.tex
+++ b/main.tex
@@ -962,18 +962,27 @@ Das nozizeptive System kommuniziert über die Amygdala mit dem Limbischen System
 \end{frame}
 
 
-% \begin{frame}{Körpereigene Opioide}
-% \begin{itemize}
-%     \item Endorphine, Enkephaline, Dynorphine 
-% \item Verschiedene Rezeptorklassen (\(\mu\), \(\delta\), \(\kappa\) ) sind relativ, aber nicht komplett selektiv für bestimmte Opioid-Klassen
-% \item
-% Alle Rezeptoren sind G-Protein gekoppelte Rezeptoren vom Typ G\textsubscript{S}
-% \item
-% Das heißt: \pause Sie hemmen Adenylatzyklase
+\begin{frame}{Körpereigene Opioide}
+\begin{itemize}
+    \item Endorphine, Enkephaline, Dynorphine
+    \item 
+    Kommen in Hirnstamm, Rückenmark, Hypothalamus und Hypophyse vor (prä- und postsynaptisch)
+\item Verschiedene Rezeptorklassen (\(\mu\), \(\delta\), \(\kappa\)) sind relativ, aber nicht komplett selektiv für bestimmte Opioid-Klassen
+\item
+Alle Rezeptoren sind G-Protein gekoppelte Rezeptoren vom Typ G\textsubscript{i}
+\item
+Das heißt: \pause Sie hemmen Adenylatzyklase
+\item 
+Wirkung: Unterbrechen die Weiterleitung in der Schmerzbahn
+\begin{itemize}
+\item 
+Präsynaptisch:  Hemmen Freisetzung von Neurotransmittern
+\item 
+Postsynaptisch: verursachen Hyperpolarisation 
+\end{itemize}
+\end{itemize}
 
-% \end{itemize}
-
-% \end{frame}
+\end{frame}
 
 
 
